RESOLVED FIXED282485
[WebGPU] computeMininumVertexInstanceCount() does not handle buffer sizes less than lastStride
https://bugs.webkit.org/show_bug.cgi?id=282485
Summary [WebGPU] computeMininumVertexInstanceCount() does not handle buffer sizes les...
Mike Wyrzykowski
Reported 2024-11-01 22:13:59 PDT
[WebGPU] computeMininumVertexInstanceCount() does not handle buffer sizes less than lastStride
Attachments
Mike Wyrzykowski
Comment 1 2024-11-01 22:15:02 PDT
Mike Wyrzykowski
Comment 2 2024-11-01 22:46:44 PDT
EWS
Comment 3 2024-11-04 12:36:59 PST
Committed 286109@main (bf7503217164): <https://commits.webkit.org/286109@main> Reviewed commits have been landed. Closing PR #36087 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.