[WebGPU] computeMininumVertexInstanceCount() does not handle buffer sizes less than lastStride https://bugs.webkit.org/show_bug.cgi?id=282485 rdar://138783147

Reviewed by Tadeu Zagallo.

When stride == 0 but lastStride > bufferSize, we incorrectly did not report
the max allowed vertex count was zero.

* LayoutTests/fast/webgpu/nocrash/fuzz-282485-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-282485.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::computeMininumVertexInstanceCount const):
Refactor common logic.

* Source/WebGPU/WebGPU/RenderPassEncoder.h:
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::runIndexBufferValidation):
(WebGPU::RenderPassEncoder::computeMininumVertexInstanceCount):
(WebGPU::RenderPassEncoder::computeMininumVertexInstanceCount const):

Canonical link: https://commits.webkit.org/286109@main